[gd_scene load_steps=12 format=2]

[ext_resource path="res://resources/models/board/PositionWide/Plate.mesh" type="ArrayMesh" id=1]
[ext_resource path="res://resources/models/board/PositionWide/Frame.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://scripts/board/TargetPosition.gd" type="Script" id=3]
[ext_resource path="res://resources/shaders/board/Frame.shader" type="Shader" id=4]
[ext_resource path="res://resources/material/board/PositionWide/Plate - Target.tres" type="Material" id=5]
[ext_resource path="res://resources/interface/fonts/Aleo 700.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://resources/interface/fonts/Aleo regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 4 )
shader_param/frame_color = null

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( 2.5, 0.124998, 5.54963, 2.29982, 0.124998, 5.75, 2.5, 0, 5.54963, 2.5, 0.124998, -5.55075, 2.2499, 0.175, 5.34926, -2.30031, 0.124998, 5.75, 2.29982, 0, 5.75, 2.09965, 0.175, 5.49897, 2.5, 0, -5.55075, 2.09965, 0.175, -5.5001, 2.2499, 0.175, -5.35038, 2.29982, 0.124998, -5.75, -2.30031, 0, 5.75, -2.10014, 0.175, 5.49897, -2.25039, 0.175, 5.34926, -2.5, 0.124998, 5.54963, 2.29982, 0, -5.75, -2.10014, 0.175, -5.5001, -2.30031, 0.124998, -5.75, -2.5, 0, 5.54963, -2.25039, 0.175, -5.35038, -2.5, 0.124998, -5.55075, -2.30031, 0, -5.75, -2.5, 0, -5.55075 )

[sub_resource type="DynamicFont" id=5]
resource_name = "Aleo Bold 128"
size = 128
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
resource_name = "Aleo Regular 72"
size = 72
font_data = ExtResource( 7 )

[node name="TargetPosition" type="StaticBody" groups=["Position"]]
script = ExtResource( 3 )
player_positions = [ PoolVector3Array( 0, 0.2, 0 ), PoolVector3Array( 0, 0.2, 1.75, 0, 0.2, -1.75 ), PoolVector3Array( 0, 0.2, 3.5, 0, 0.2, 0, 0, 0.2, -3.5 ), PoolVector3Array( 1.25, 0.2, 3.5, -1.25, 0.2, 1.25, 1.25, 0.2, -1.25, -1.25, 0.2, -3.5 ), PoolVector3Array( 1.25, 0.2, 4, -1.25, 0.2, 2, 1.25, 0.2, 0, -1.25, 0.2, -2, 1.25, 0.2, -4 ), PoolVector3Array( 1.75, 0.2, 4, -1.75, 0.2, 4, 1.75, 0.2, 0, -1.75, 0.2, 0, 1.75, 0.2, -4, -1.75, 0.2, -4 ) ]

[node name="PlateMesh" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )
material/0 = ExtResource( 5 )

[node name="FrameMesh" type="MeshInstance" parent="."]
visible = false
mesh = ExtResource( 2 )
material/0 = SubResource( 7 )

[node name="PlateCollision" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="TitleLabel" type="Label3D" parent="."]
transform = Transform( -4.37114e-08, -1, 0, -4.37114e-08, 1.91069e-15, 1, -1, 4.37114e-08, -4.37114e-08, -0.75, 0.2, 0 )
text = "Start"
font = SubResource( 5 )

[node name="TopicLabel" type="Label3D" parent="."]
transform = Transform( -4.37114e-08, -1, 0, -4.37114e-08, 1.91069e-15, 1, -1, 4.37114e-08, -4.37114e-08, 0.75, 0.2, 0 )
font = SubResource( 6 )
